--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -18,29 +18,31 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/texArtist"
+        android:id="@+id/textTitle"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginStart="9dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="8dp"
-        android:text="Artist"
+        android:gravity="center_vertical"
+        android:text="Title"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/imageAlbum"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textTitle"
+        android:id="@+id/texArtist"
         android:layout_width="0dp"
-        android:layout_height="52dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="9dp"
-        android:layout_marginTop="1dp"
         android:layout_marginEnd="8dp"
-        android:text="Title"
-        android:textSize="15sp"
+        android:text="Artist"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/imageAlbum"
-        app:layout_constraintTop_toBottomOf="@+id/texArtist" />
+        app:layout_constraintTop_toBottomOf="@+id/textTitle" />
 
     <TextView
         android:id="@+id/textDuration"
